Imagem de avatar e texto introdutório adicionados.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@ body {
     background-color: #085ed7;
 }
 /*O código do W3schools acaba aqui. */
+img {
+    margin-left: auto;
+    margin-right: auto;
+    width:180px;
+    display: flex;
+}
+.Títulos {
+    background: #04AA6D;
+}
+h1 {
+    text-align: center;
+}
 </style> 
 <body>
     </style>
@@ -55,4 +67,6 @@ body {
     <li><a href="#informações">Informações profissionais</a></li>
     <li><a href="#contatos">Contatos</a></li>
     <li style="float:right"><a href="#sobre">Sobre mim</a></li>
-</ul>
+</ul><br>
+<img src="imagem de perfil.png" alt="Imagem de perfil">
+<h1>Miguel Pereira Lima, a seu dispor</h1>
