Conteúdo textual adicionado com sucesso. Ele foi estilizado com o uso de CSS e usa tanto 'h1' quanto 'h2'.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@ h1 {
 .Menus > .Menu-direito {
     float:right;
 }
+.Títulos {
+    display:table;
+    background:yellow;
+    text-align: center;
+    padding:15px;
+    margin-left:auto;
+    margin-right: auto;
+}
+.Conteúdo-textual {
+    display: flex;
+    margin-left:1%;
+    margin-right:1%;
+    flex-wrap:wrap
+}
 </style> 
 <body>
     </style>
@@ -96,3 +110,28 @@ h1 {
 </div>
 <img id="Perfil" src="imagem de perfil.png" alt="Imagem de perfil">
 <h1>Miguel Pereira Lima, a seu dispor</h1>
+<h1 class="Títulos">Sobre mim</h1>
+<div class="Conteúdo-textual">
+    <h2>Programador-aprendiz atualmente trabalhando com tecnologias de front e back-end.</h2>
+
+    <h2>Meu sonho é virar um programador profissional e alcançar uma carreira de sucesso nos
+    Estados Unidos.</h2>
+    
+    <h2>Você pode me contatar a partir do email: miguel.p.rogramas@gmail.com</h2>   
+</div>
+<h1 class="Títulos">Formações</h1>
+<div class="Conteúdo-textual">
+    <h2>Atualmente estudando no SENAI Almirante Tamandaré através do curso: " Técnico em Desenvolvimento de Sistemas".</h2>
+</div>
+<h1 class="Títulos">Experiências</h1>
+<div class="Conteúdo-textual">
+    <h2>Eu já me expus a vários projetos a partir do meu curso. Alguns projetos pessoais também merecem algum reconhecimento.</h2>
+</div>
+<h1 class="Títulos">Soft-skills</h1>
+<div class="Conteúdo-textual">
+    <h2>Eu me comunico relativamente bem. Proponho um desempenho animado e energético.</h2>
+</div>
+<h1 class="Títulos">Hard-skills</h1>
+<div class="Conteúdo-textual">
+    <h2>Possuo um conhecimento básico de HTML, CSS e Python. Ampliamento de conhecimentos futuros planejados.</h2>
+</div>
