Formulário feito com sucesso. Ele foi tirado do W3schools e, como expresso nos comentários do código, utiliza extensivamente do elemento HTML 'input', e também das pseudo-classes 'focus' e 'hover'.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ input[type=submit]:hover {
     background-color: #ffffff;
     padding: 20px;
 }
-/*O fomulário da W3schools acaba aqui.*/
+/*O formulário da W3schools acaba aqui.*/
 </style> 
 <body>
     </style>
